# trolley_bringup

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: slam_toolbox_online.yaml
config/nav/: costmap_common.yaml  costmap_common.yaml.save  costmap_global.yaml  costmap_local.yaml  dwa_planner.yaml
launch/: myroom.pgm  myroom.yaml  test_launch.launch  testmap.pgm  testmap.yaml  trolley_bringup.launch  trolley_bringup_hector.launch  trolley_explore.launch  trolley_follower.launch  trolley_follower.launch.save  trolley_navigation.launch  trolley_obstacle_avoidance.launch  trolley_random_explore.launch
scripts/: calibrate_ticks.py  cmd_vel_boost.py  drive_test.py  encoder_to_odom.py  goto_location.py  lidar_follower.py  random_explorer.py  record_location.py  start_exploration.sh  trolley_command_node.py  wifi_initial_pose.py  wifi_locate.py  wifi_resolver.py
scripts/.claude/: settings.local.json
urdf/: trolley.urdf
